Fixes burger menu positioning and modals on mobile

--- a/src/components/feature-cards/FeatureCards.scss
+++ b/src/components/feature-cards/FeatureCards.scss
@@ -1,8 +1,10 @@
 .feature-detailed-description-container {
-  max-height: 75vh;
   display: flex;
-
   flex-direction: column;
+}
+
+.ReactModal__Content {
+  min-width: 400px;
 }
 
 .feature-card {
@@ -61,9 +63,8 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-align: center;
+  height: 100%;
 
   p {
     font-size: 17px;
@@ -102,5 +103,11 @@
 @media only screen and (max-width: 810px) {
   #feature-card-container {
     padding: 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .ReactModal__Content {
+    min-width: 300px;
   }
 }
